--- a/index.html
+++ b/index.html
@@ -30,40 +30,49 @@
   	<section class="cms-search">
 		<form class="form-horizontal">
 		  <div class="form-group">
-		    <label for="userPhone" class="col-sm-2 control-label">手机号：</label>
-		    <input type="text" class="form-control" id="userPhone" placeholder="Jane Doe">
+		    <label for="userPhone" class="control-label">手机号：</label>
+		    <input type="text" class="form-control" id="userPhone" placeholder="Jane Doe" >
 		  </div>
-		  <button type="submit" class="btn btn-default">搜索</button>
+		  <button type="submit" id="search_btn"class="btn btn-default">搜索</button>
 		</form>
   	</section>
     <section class="cms-list">
     	<div class="row">
-	        <div class="col-md-4">
-	          <table class="table">
-	            <thead>
-	              <tr>
-	                <th>手机号</th>
-	                <th>验证码</th>
-	                <th>订单号</th>
-	                <th>状态</th>
-	                <th>功能</th>
-	              </tr>
-	            </thead>
-	            <tbody>
-	              <tr>
-	                <td>15234634533</td>
-	                <td>2344</td>
-	                <td>e134511</td>
-	                <td>未领取</td>
-	                <td><a href="">加入排队</a></td>
-	              </tr>
-	            </tbody>
-	          </table>
-	        </div>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>手机号</th>
+                <!-- <th>验证码</th> -->
+                <th>订单号</th>
+                <th>状态</th>
+                <th>功能</th>
+              </tr>
+            </thead>
+            <tbody id="index_list">
+              	<tr><td colspan="5" class="text-center">none data!</td></tr>
+            </tbody>
+          </table>
 	    </div>
     </section>
-	
+
+    <!-- 模板 -->
+    <textarea tpl="index_list">
+    	{{#trades}}
+		<tr>
+			<td>{{receiver_mobile}}</td>
+			<!-- <td>{{}}</td> -->
+			<td>{{ctid}}（后4位）</td>
+			<td>{{status_str}}</td>
+			<td><a href="javascript:void(0);" tid="{{tid}}">加入排队</a></td>
+		</tr>
+		{{/trades}}
+    </textarea>
+	<!-- /模板 -->
+
     <script src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/mustache.min.js"></script>
+    <script src="js/util.js"></script>
+    <script src="js/page/index.js"></script>
   </body>
 </html>
